fix(be): 추천 AI 실행 경계와 기존 운영 계약 정합화